<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="12dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/field1" />

    <EditText
        android:id="@+id/userAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"/>

    <TextView
        android:id="@+id/noPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/field2" />

    <EditText
        android:id="@+id/userPax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleBtnSvs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/noSvs"
            android:textOn="@string/svs" />

        <ToggleButton
            android:id="@+id/toggleBtnGstEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/noGst"
            android:textOn="@string/gst" />
    </LinearLayout>

    <TextView
        android:id="@+id/discount"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/field3" />

    <EditText
        android:id="@+id/userDisc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <RadioGroup
        android:id="@+id/payGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/payCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cash"
            android:layout_marginRight="5dp"/>

        <RadioButton
            android:id="@+id/payPayNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PayNow" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSplit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/submit" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:text="@string/clear" />
    </LinearLayout>

    <TextView
        android:id="@+id/textTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textSplit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>